Remove unneeded changes